--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "node test.js"
+    "test": "node test.js",
+    "dev": "node index.js"
   },
   "dependencies": {
     "ejs": "^3.1.5",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "nodemon": "^2.0.12"
   },
   "devDependencies": {
     "got": "^11.3.0",
