--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev": "node index.js"
   },
   "dependencies": {
+    "check-disk-space": "^3.0.1",
     "ejs": "^3.1.5",
     "express": "^4.15.2",
     "nodemon": "^2.0.12"
